--- a/frontend/publico/autenticacion/registro.html
+++ b/frontend/publico/autenticacion/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="../css/estiloautenticacion.css">
+    <link rel="stylesheet" href="frontend/publico/css/estiloautenticacion.css">
 
     <!--Bootstrap icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css">
@@ -23,7 +23,7 @@
      />
 
      <!-- Estilos -->
-    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="frontend/publico/css/navbar.css">
 
 </head>
 <body>
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="frontend/publico/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Metropolitan
             </a>
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../inicio.html">Inicio</a>
+                        <a class="nav-link" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../información_estatica.html">Conocenos</a>
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="../../usuario/inicio_editor.html">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../admin/inicio.html">Administrar</a>
+                        <a class="nav-link" href="/admin">Administrar</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
             <div class="d-flex align-items-center user-info ms-auto">
                 <div class="text-end" id="nombre-rol">
                     <span class="username" id="navbar-info-usuario-nombre">
-                        <a href="login.html">Inicia Sesión</a>
+                        <a href="/login">Inicia Sesión</a>
                     </span><br>
                 </div>
             </div>
