--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conocenos</title>
-    <link rel="stylesheet" href="css/estiloconocenos.css">
 
     <!--Font Awesome-->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
-     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
-     crossorigin="anonymous" referrerpolicy="no-referrer" 
-     />
- 
-     <!-- Importamos el CSS de Bootstrap v5.3.3 -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" 
-     integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" 
-     crossorigin="anonymous" referrerpolicy="no-referrer" 
-     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
 
-     <!-- Estilos -->
-    <link rel="stylesheet" href="./css/navbar.css">
+    <!-- Importamos el CSS de Bootstrap v5.3.3 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" 
+    integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" 
+    />
+
+    <!-- Estilos -->
+    <link rel="stylesheet" href="frontend/publico/css/estiloconocenos.css">
+    <link rel="stylesheet" href="frontend/publico/css/navbar.css">
 </head>
 <body>
 
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="./inicio.html">Inicio</a>
+                        <a class="nav-link" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./información_estatica.html">Conocenos</a>
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="../usuario/inicio_editor.html">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../admin/inicio.html">Administrar</a>
+                        <a class="nav-link" href="/admin">Administrar</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
                     <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
                     <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
-                <a href="../usuario/perfil.html">
+                <a href="/perfil">
                     <img id="navbar-info-usuario-foto" src="./img/perfil_default.png" alt="Foto de perfil">
                 </a>
             </div>
@@ -117,23 +117,23 @@
     <div class="container mt-5">
         <h2 class="text-center font-weight-bold">Contactanos</h2>
         <div class="row">
-          <!-- Formulario -->
-          <div class="col-md-12">
-            <form>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Nombre Completo" required>
-              </div>
-              <div class="form-group">
-                <input type="email" class="form-control" placeholder="Correo Electronico" required>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" rows="4" placeholder="Mensaje" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-dark btn-block" onclick="alert('El mensaje ha sido enviado')">Enviar</button>
-            </form>
-          </div>
+            <!-- Formulario -->
+            <div class="col-md-12">
+                <form>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Nombre Completo" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Correo Electronico" required>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" rows="4" placeholder="Mensaje" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-dark btn-block" onclick="alert('El mensaje ha sido enviado')">Enviar</button>
+                </form>
+            </div>
         </div>
-      </div>
+    </div>
 
       <!-- Importamos JQuery v3.7.1 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -151,6 +151,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.14.0/sweetalert2.all.js"
     integrity="sha512-HE6XTjw3UV1hqENThKtsSn4mr3sx/lXbTSVPlOdIU3pprqz5ti16sGIGw8y5EAePRYg80O3OEBRnXPwON7vOUA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
 </body>
 </html>
