--- a/frontend/usuario/perfil.html
+++ b/frontend/usuario/perfil.html
@@ -19,15 +19,15 @@
     />
 
     <!-- Estilos de CSS -->
-    <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/perfil.css">
+    <link rel="stylesheet" href="/frontend/usuario/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/usuario/css/perfil.css">
 </head>
 <body>
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="/frontend/usuario/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Metropolitan
             </a>
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../publico/inicio.html">Inicio</a>
+                        <a class="nav-link" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../publico/información_estatica.html">Conocenos</a>
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="./inicio_editor.html">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../admin/inicio.html">Administrar</a>
+                        <a class="nav-link" href="/admin">Administrar</a>
                     </li>
                 </ul>
             </div>
@@ -55,8 +55,8 @@
                     <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
                     <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
-                <a href="./perfil.html">
-                    <img id="navbar-info-usuario-foto" src="./img/perfil_default.png" alt="Foto de perfil">
+                <a href="/perfil">
+                    <img id="navbar-info-usuario-foto" src="/frontend/usuario/img/perfil_default.png" alt="Foto de perfil">
                 </a>
             </div>
         </div>
@@ -72,7 +72,7 @@
                     <div id="contenedor-foto-perfil" class="col-12">
                         <h3>TU INFORMACIÓN</h3>
                         <button id="boton-editar-imagen-perfil" type="button" data-bs-toggle="modal" data-bs-target="#cambiar-imagen-modal">
-                            <img id="main-info-usuario-foto" src="./img/perfil_default.png" alt="Foto de perfil">
+                            <img id="main-info-usuario-foto" src="/frontend/usuario/img/perfil_default.png" alt="Foto de perfil">
                         </button>
                     </div>
                     <div id="contenedor-info-usuario" class="col-12 mt-5">
@@ -263,25 +263,25 @@
                 <div class="modal-body">
                     <form id="form-foto-perfil">
                         <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                            <img src="../img_biblioteca/perfiles/bolas.jpg" alt="Opcion-1">
+                            <img src="/frontend/img_biblioteca/perfiles/bolas.jpg" alt="Opcion-1">
                         </button>
                         <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                            <img src="../img_biblioteca/perfiles/default.png" alt="Opcion-2">
+                            <img src="/frontend/img_biblioteca/perfiles/default.png" alt="Opcion-2">
                         </button>
                         <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                            <img src="../img_biblioteca/perfiles/netflix.png" alt="Opcion-3">
+                            <img src="/frontend/img_biblioteca/perfiles/netflix.png" alt="Opcion-3">
                         </button>
                         <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                            <img src="../img_biblioteca/perfiles/pato.jpg" alt="Opcion-4">
+                            <img src="/frontend/img_biblioteca/perfiles/pato.jpg" alt="Opcion-4">
                         </button>
                         <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                            <img src="../img_biblioteca/perfiles/rana.png" alt="Opcion-5">
+                            <img src="/frontend/img_biblioteca/perfiles/rana.png" alt="Opcion-5">
                         </button>
                         <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                            <img src="../img_biblioteca/perfiles/snoopy.png" alt="Opcion-6">
+                            <img src="/frontend/img_biblioteca/perfiles/snoopy.png" alt="Opcion-6">
                         </button>
                         <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                            <img src="../img_biblioteca/perfiles/xbox_donut.png" alt="Opcion-7">
+                            <img src="/frontend/img_biblioteca/perfiles/xbox_donut.png" alt="Opcion-7">
                         </button>
                         <!-- Añade más etiquetas según sea necesario -->
                     </form>
@@ -312,8 +312,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <!-- Scripts de JS -->
-    <script src="./js/perfil.js"></script>
+    <script src="/frontend/usuario/js/perfil.js"></script>
 
-    <script src="./js/perfil_ajax.js"></script>
+    <script src="/frontend/usuario/js/perfil_ajax.js"></script>
 </body>
 </html>
