cambios en el main y en pantallas

--- a/frontend/admin/inicio.html
+++ b/frontend/admin/inicio.html
@@ -16,19 +16,19 @@
             </a>
         </div>
         <nav class="menu d-flex flex-column flex-grow-1">
-            <a href="crud_articulos.html" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_articulos.png"
+            <a href="/crudarticulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_articulos.png"
                     alt="Crud_articulos" class="icon mr-2"> CRUD DE ARTICULOS</a>
-            <a href="crud_etiquetas.html" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_etiquetas.png"
+            <a href="/crudetiquetas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_etiquetas.png"
                     alt="Etiquetas" class="icon mr-2"> CRUD ETIQUETAS</a>
-            <a href="crud_usuarios.html" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_usuarios.png"
+            <a href="/crudusuarios" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_usuarios.png"
                     alt="Usuarios" class="icon mr-2"> CRUD USUARIOS</a>
-            <a href="moderación_artículos.html" class="d-flex align-items-center p-3"><img src="frontend/admin/img/mod_articulos.png"
+            <a href="/moderacionarticulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/mod_articulos.png"
                     alt="Artículos" class="icon mr-2"> MOD. ARTÍCULOS</a>
-            <a href="moderacion_comentarios.html" class="d-flex align-items-center p-3"><img
+            <a href="/moderacioncomentarios" class="d-flex align-items-center p-3"><img
                     src="frontend/admin/img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
-            <a href="estadísticas.html" class="d-flex align-items-center p-3"><img src="frontend/admin/img/estadisticas.png"
+            <a href="/estadisticas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/estadisticas.png"
                     alt="Estadísticas" class="icon mr-2"> ESTADÍSTICAS</a>
-            <a href="dudas.html" class="d-flex align-items-center p-3"><img src="frontend/admin/img/dudas.png" alt="Dudas"
+            <a href="/dudas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/dudas.png" alt="Dudas"
                     class="icon mr-2"> DUDAS DE USUARIOS</a>
         </nav>
     </aside>
