--- a/frontend/admin/estadísticas.html
+++ b/frontend/admin/estadísticas.html
@@ -6,31 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pantalla de Administración</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/estadisticas.css">
+    <link rel="stylesheet" href="/frontend/admin/css/estadisticas.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
     <aside class="sidebar d-flex flex-column">
         <div class="logo d-flex align-items-center p-3">
-            <a href="../publico/inicio.html">
-                <img src="img/logo.PNG" alt="Logo Metropolitan" class="logo-img mr-2">
+            <a href="/">
+                <img src="frontend/admin/img/logo.PNG" alt="Logo Metropolitan" class="logo-img mr-2">
             </a>
         </div>
         <nav class="menu d-flex flex-column flex-grow-1">
-            <a href="crud_articulos.html" class="d-flex align-items-center p-3"><img src="img/crud_articulos.png"
+            <a href="/crudarticulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_articulos.png"
                     alt="Crud_articulos" class="icon mr-2"> CRUD DE ARTICULOS</a>
-            <a href="crud_etiquetas.html" class="d-flex align-items-center p-3"><img src="img/crud_etiquetas.png"
+            <a href="/crudetiquetas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_etiquetas.png"
                     alt="Etiquetas" class="icon mr-2"> CRUD ETIQUETAS</a>
-            <a href="crud_usuarios.html" class="d-flex align-items-center p-3"><img src="img/crud_usuarios.png"
+            <a href="/crudusuarios" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_usuarios.png"
                     alt="Usuarios" class="icon mr-2"> CRUD USUARIOS</a>
-            <a href="moderación_artículos.html" class="d-flex align-items-center p-3"><img src="img/mod_articulos.png"
+            <a href="/moderacionarticulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/mod_articulos.png"
                     alt="Artículos" class="icon mr-2"> MOD. ARTÍCULOS</a>
-            <a href="moderacion_comentarios.html" class="d-flex align-items-center p-3"><img
-                    src="img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
-            <a href="estadísticas.html" class="d-flex align-items-center p-3"><img src="img/estadisticas.png"
+            <a href="/moderacioncomentarios" class="d-flex align-items-center p-3"><img
+                    src="frontend/admin/img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
+            <a href="/estadisticas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/estadisticas.png"
                     alt="Estadísticas" class="icon mr-2"> ESTADÍSTICAS</a>
-            <a href="dudas.html" class="d-flex align-items-center p-3"><img src="img/dudas.png" alt="Dudas"
+            <a href="/dudas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/dudas.png" alt="Dudas"
                     class="icon mr-2"> DUDAS DE USUARIOS</a>
         </nav>
     </aside>
@@ -41,7 +41,7 @@
         <header class="header d-flex align-items-center justify-content-between p-3">
             <div class="d-flex align-items-center">
                 <h1 class="mb-0 d-flex align-items-center">
-                    <img src="img/estadisticas.png" alt="Icono Título" class="icon mr-2"> ESTADISTICAS
+                    <img src="frontend/admin/img/estadisticas.png" alt="Icono Título" class="icon mr-2"> ESTADISTICAS
                 </h1>
             </div>
             <div class="user-info d-flex align-items-center">
@@ -49,9 +49,8 @@
                     <span>Nombre de usuario</span><br>
                     <small>Administrador</small>
                 </div>
-                <a href="../usuario/perfil.html">
-                    <img src="img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40"
-                        height="40">
+                <a href="/perfil">
+                    <img src="frontend/admin/img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40" height="40">
                 </a>
             </div>
         </header>
@@ -84,7 +83,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/estadisticas.js"></script>
+    <script src="/frontend/admin/js/estadisticas.js"></script>
 </body>
 
 </html>
