--- a/frontend/admin/moderacion_comentarios.html
+++ b/frontend/admin/moderacion_comentarios.html
@@ -6,34 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pantalla de Administración</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/Inicio.css">
+    <link rel="stylesheet" href="/frontend/admin/css/Inicio.css">
 </head>
 
 <body>
-    <aside class="sidebar d-flex flex-column">
-        <div class="logo d-flex align-items-center p-3">
-            <a href="../publico/inicio.html">
-                <img src="img/logo.PNG" alt="Logo Metropolitan" class="logo-img mr-2">
-            </a>
-        </div>
-        <nav class="menu d-flex flex-column flex-grow-1">
-            <a href="crud_articulos.html" class="d-flex align-items-center p-3"><img src="img/crud_articulos.png"
-                    alt="Crud_articulos" class="icon mr-2"> CRUD DE ARTICULOS</a>
-            <a href="crud_etiquetas.html" class="d-flex align-items-center p-3"><img src="img/crud_etiquetas.png"
-                    alt="Etiquetas" class="icon mr-2"> CRUD ETIQUETAS</a>
-            <a href="crud_usuarios.html" class="d-flex align-items-center p-3"><img src="img/crud_usuarios.png"
-                    alt="Usuarios" class="icon mr-2"> CRUD USUARIOS</a>
-            <a href="moderación_artículos.html" class="d-flex align-items-center p-3"><img src="img/mod_articulos.png"
-                    alt="Artículos" class="icon mr-2"> MOD. ARTÍCULOS</a>
-            <a href="moderacion_comentarios.html" class="d-flex align-items-center p-3"><img
-                    src="img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
-            <a href="estadísticas.html" class="d-flex align-items-center p-3"><img src="img/estadisticas.png"
-                    alt="Estadísticas" class="icon mr-2"> ESTADÍSTICAS</a>
-            <a href="dudas.html" class="d-flex align-items-center p-3"><img src="img/dudas.png" alt="Dudas"
-                    class="icon mr-2"> DUDAS DE USUARIOS</a>
-        </nav>
-    </aside>
-
+  <aside class="sidebar d-flex flex-column">
+      <div class="logo d-flex align-items-center p-3">
+          <a href="/">
+              <img src="frontend/admin/img/logo.PNG" alt="Logo Metropolitan" class="logo-img mr-2">
+          </a>
+      </div>
+      <nav class="menu d-flex flex-column flex-grow-1">
+          <a href="/crudarticulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_articulos.png"
+                  alt="Crud_articulos" class="icon mr-2"> CRUD DE ARTICULOS</a>
+          <a href="/crudetiquetas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_etiquetas.png"
+                  alt="Etiquetas" class="icon mr-2"> CRUD ETIQUETAS</a>
+          <a href="/crudusuarios" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_usuarios.png"
+                  alt="Usuarios" class="icon mr-2"> CRUD USUARIOS</a>
+          <a href="/moderacionarticulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/mod_articulos.png"
+                  alt="Artículos" class="icon mr-2"> MOD. ARTÍCULOS</a>
+          <a href="/moderacioncomentarios" class="d-flex align-items-center p-3"><img
+                  src="frontend/admin/img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
+          <a href="/estadisticas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/estadisticas.png"
+                  alt="Estadísticas" class="icon mr-2"> ESTADÍSTICAS</a>
+          <a href="/dudas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/dudas.png" alt="Dudas"
+                  class="icon mr-2"> DUDAS DE USUARIOS</a>
+      </nav>
+  </aside>
 
     <div class="vertical-divider"></div>
 
@@ -41,7 +40,7 @@
         <header class="header d-flex align-items-center justify-content-between p-3">
             <div class="d-flex align-items-center">
                 <h1 class="mb-0 d-flex align-items-center">
-                    <img src="img/mod_comentarios.png" alt="Icono Título" class="icon mr-2"> MODERACION DE COMENTARIOS
+                    <img src="frontend/admin/img/mod_comentarios.png" alt="Icono Título" class="icon mr-2"> MODERACION DE COMENTARIOS
                 </h1>
             </div>
             <div class="user-info d-flex align-items-center">
@@ -49,10 +48,9 @@
                     <span>Nombre de usuario</span><br>
                     <small>Administrador</small>
                 </div>
-                <a href="../usuario/perfil.html">
-                    <img src="img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40"
-                        height="40">
-                </a>
+                <a href="/perfil">
+                  <img src="frontend/admin/img/perfil_default.png" alt="Foto de perfil" class="rounded-circle" width="40" height="40">
+              </a>
             </div>
         </header>
 
@@ -66,7 +64,7 @@
     <!-- Comentario -->
     <div id="comentarios-container" class="comentarios-container">
         <div class="comentario">
-            <img src="img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
+            <img src="frontend/admin/img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
           </a>
           <div class="contenido-comentario">
             <a href="/frontend/usuario/perfil.html" class="nombre-usuario">Nombre de Usuario</a>
@@ -82,7 +80,7 @@
       <!-- Comentario 2 -->
       <div id="comentarios-container" class="comentarios-container">
         <div class="comentario">
-            <img src="img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
+            <img src="frontend/admin/img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
           </a>
           <div class="contenido-comentario">
             <a href="/frontend/usuario/perfil.html" class="nombre-usuario">Nombre de Usuario</a>
@@ -98,7 +96,7 @@
       <!-- Comentario 3 -->
       <div id="comentarios-container" class="comentarios-container">
         <div class="comentario">
-            <img src="img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
+            <img src="frontend/admin/img/perfil_default.png" alt="Foto de Perfil" class="foto-perfil">
           </a>
           <div class="contenido-comentario">
             <a href="/frontend/usuario/perfil.html" class="nombre-usuario">Nombre de Usuario</a>
@@ -118,8 +116,8 @@
         <button class="btn-guardar" onclick="guardarCambios()">Guardar cambios</button>
       </div>
       
-      <script src="js/moderacion_comentarios.js"></script>
-      <link rel="stylesheet" href="css/moderacion_comentarios.css">
+      <script src="/frontend/admin/js/moderacion_comentarios.js"></script>
+      <link rel="stylesheet" href="/frontend/admin/css/moderacion_comentarios.css">
 
 </body>
 
