--- a/frontend/usuario/redaccion_articulos.html
+++ b/frontend/usuario/redaccion_articulos.html
@@ -19,15 +19,15 @@
     />
 
     <!-- Estilos de CSS -->
-    <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/redaccion_articulos.css">
+    <link rel="stylesheet" href="/frontend/usuario/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/usuario/css/redaccion_articulos.css">
 </head>
 <body>
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="/frontend/usuario/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Metropolitan
             </a>
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,16 +36,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../publico/inicio.html">Inicio</a>
+                        <a class="nav-link" href="/frontend/publico/inicio.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../publico/información_estatica.html">Conocenos</a>
+                        <a class="nav-link" href="/frontend/publico/información_estatica.html">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./inicio_editor.html">Escribe</a>
+                        <a class="nav-link" href="/frontend/admin/inicio.html">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../admin/inicio.html">Administrar</a>
+                        <a class="nav-link" href="/frontend/admin/inicio.html">Administrar</a>
                     </li>
                 </ul>
             </div>
@@ -55,8 +55,8 @@
                     <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
                     <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
-                <a href="./perfil.html">
-                    <img id="navbar-info-usuario-foto" src="./img/perfil_default.png" alt="Foto de perfil">
+                <a href="/frontend/usuario/perfil.html">
+                    <img id="navbar-info-usuario-foto" src="/frontend/usuario/img/perfil_default.png" alt="Foto de perfil">
                 </a>
             </div>
         </div>
@@ -81,7 +81,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Scripts de JS -->
-    <script src="js/redaccion_articulos.js"></script>
+    <script src="/frontend/usuario/js/redaccion_articulos.js"></script>
     
     <div class="container">
         <h1>Escribe tu artículo</h1>
@@ -122,13 +122,13 @@
             <div class="modal-body">
                 <form id="form-foto-articulo">
                     <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                        <img src="../img_biblioteca/articulos/montañas_nevadas.png" alt="Opcion-1" class="img-pequeña">
+                        <img src="/frontend/img_biblioteca/articulos/montañas_nevadas.png" alt="Opcion-1" class="img-pequeña">
                     </button>
                     <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                        <img src="../img_biblioteca/articulos/Ciudad.jpg" alt="Opcion-2" class="img-pequeña">
+                        <img src="/frontend/img_biblioteca/articulos/Ciudad.jpg" alt="Opcion-2" class="img-pequeña">
                     </button>
                     <button class="toggle-btn opcion-foto-perfil mt-1" type="button" onclick="selectImage(this)">
-                        <img src="../img_biblioteca/articulos/Bosque.jpg" alt="Opcion-3" class="img-pequeña">
+                        <img src="/frontend/img_biblioteca/articulos/Bosque.jpg" alt="Opcion-3" class="img-pequeña">
                     </button>
                 </form>
             </div>
