Inicio de la autenticación con JWT

--- a/frontend/admin/moderacion_comentarios.html
+++ b/frontend/admin/moderacion_comentarios.html
@@ -17,21 +17,21 @@
           </a>
       </div>
       <nav class="menu d-flex flex-column flex-grow-1">
-          <a href="/crudarticulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_articulos.png"
-                  alt="Crud_articulos" class="icon mr-2"> CRUD DE ARTICULOS</a>
-          <a href="/crudetiquetas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_etiquetas.png"
-                  alt="Etiquetas" class="icon mr-2"> CRUD ETIQUETAS</a>
-          <a href="/crudusuarios" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_usuarios.png"
-                  alt="Usuarios" class="icon mr-2"> CRUD USUARIOS</a>
-          <a href="/moderacionarticulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/mod_articulos.png"
-                  alt="Artículos" class="icon mr-2"> MOD. ARTÍCULOS</a>
-          <a href="/moderacioncomentarios" class="d-flex align-items-center p-3"><img
-                  src="frontend/admin/img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
-          <a href="/estadisticas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/estadisticas.png"
-                  alt="Estadísticas" class="icon mr-2"> ESTADÍSTICAS</a>
-          <a href="/dudas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/dudas.png" alt="Dudas"
-                  class="icon mr-2"> DUDAS DE USUARIOS</a>
-      </nav>
+        <a href="/admin/articulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_articulos.png"
+                alt="Crud_articulos" class="icon mr-2"> CRUD DE ARTICULOS</a>
+        <a href="/admin/etiquetas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_etiquetas.png"
+                alt="Etiquetas" class="icon mr-2"> CRUD ETIQUETAS</a>
+        <a href="/admin/usuarios" class="d-flex align-items-center p-3"><img src="frontend/admin/img/crud_usuarios.png"
+                alt="Usuarios" class="icon mr-2"> CRUD USUARIOS</a>
+        <a href="/admin/mod-articulos" class="d-flex align-items-center p-3"><img src="frontend/admin/img/mod_articulos.png"
+                alt="Artículos" class="icon mr-2"> MOD. ARTÍCULOS</a>
+        <a href="/admin/mod-comentarios" class="d-flex align-items-center p-3"><img
+                src="frontend/admin/img/mod_comentarios.png" alt="Comentarios" class="icon mr-2"> MOD. COMENTARIOS</a>
+        <a href="/admin/estadisticas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/estadisticas.png"
+                alt="Estadísticas" class="icon mr-2"> ESTADÍSTICAS</a>
+        <a href="/admin/dudas" class="d-flex align-items-center p-3"><img src="frontend/admin/img/dudas.png" alt="Dudas"
+                class="icon mr-2"> DUDAS DE USUARIOS</a>
+    </nav>
   </aside>
 
     <div class="vertical-divider"></div>
