--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="frontend/publico/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Metropolitan
             </a>
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,17 +39,16 @@
                         <a class="nav-link" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./información_estatica.html">Conocenos</a>
+                        <a class="nav-link" href="/conocenos">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../usuario/inicio_editor.html">Escribe</a>
+                        <a class="nav-link" href="/redaccion">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin">Administrar</a>
+                        <a class="nav-link" href="/auth/pagina-intermedia">Administrar</a>
                     </li>
                 </ul>
             </div>
-
             <!-- Información y foto del usuario -->
             <div class="d-flex align-items-center user-info ms-auto">
                 <div class="text-end" id="nombre-rol">
@@ -57,7 +56,7 @@
                     <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
                 <a href="/perfil">
-                    <img id="navbar-info-usuario-foto" src="./img/perfil_default.png" alt="Foto de perfil">
+                    <img id="navbar-info-usuario-foto" src="frontend/publico/img/perfil_default.png" alt="Foto de perfil">
                 </a>
             </div>
         </div>
