--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -43,13 +43,13 @@
                         <a class="nav-link" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./información_estatica.html">Conocenos</a>
+                        <a class="nav-link" href="/conocenos">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../usuario/inicio_editor.html">Escribe</a>
+                        <a class="nav-link" href="/redaccion">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin">Administrar</a>
+                        <a class="nav-link" href="/auth/pagina-intermedia">Administrar</a>
                     </li>
                 </ul>
             </div>
