--- a/frontend/usuario/inicio_editor.html
+++ b/frontend/usuario/inicio_editor.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="frontend/publico/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Metropolitan
             </a>
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,16 +36,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../publico/inicio.html">Inicio</a>
+                        <a class="nav-link" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../publico/información_estatica.html">Conocenos</a>
+                        <a class="nav-link" href="/conocenos">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./inicio_editor.html">Escribe</a>
+                        <a class="nav-link" href="/redaccion">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../admin/inicio.html">Administrar</a>
+                        <a class="nav-link" href="/auth/pagina-intermedia">Administrar</a>
                     </li>
                 </ul>
             </div>
@@ -55,8 +55,8 @@
                     <span class="username" id="navbar-info-usuario-nombre">Nombre</span><br>
                     <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
-                <a href="./perfil.html">
-                    <img id="navbar-info-usuario-foto" src="./img/perfil_default.png" alt="Foto de perfil">
+                <a href="/perfil">
+                    <img id="navbar-info-usuario-foto" src="frontend/publico/img/perfil_default.png" alt="Foto de perfil">
                 </a>
             </div>
         </div>
