--- a/frontend/usuario/perfil.html
+++ b/frontend/usuario/perfil.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/frontend/usuario/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="frontend/publico/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Metropolitan
             </a>
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,13 +39,13 @@
                         <a class="nav-link" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../publico/información_estatica.html">Conocenos</a>
+                        <a class="nav-link" href="/conocenos">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./inicio_editor.html">Escribe</a>
+                        <a class="nav-link" href="/redaccion">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/admin">Administrar</a>
+                        <a class="nav-link" href="/auth/pagina-intermedia">Administrar</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
                     <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
                 <a href="/perfil">
-                    <img id="navbar-info-usuario-foto" src="/frontend/usuario/img/perfil_default.png" alt="Foto de perfil">
+                    <img id="navbar-info-usuario-foto" src="frontend/publico/img/perfil_default.png" alt="Foto de perfil">
                 </a>
             </div>
         </div>
@@ -118,7 +118,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn btn-dark mt-3" onclick="location.href='./inicio_editor.html'">Ver más</button>
+                        <button class="btn btn-dark mt-3" onclick="location.href=''">Ver más</button>
                     </div>
 
                     <!-- Las etiquetas del usuario -->
