Autenticacion con JWT implementada

--- a/frontend/usuario/perfil.html
+++ b/frontend/usuario/perfil.html
@@ -312,8 +312,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <!-- Scripts de JS -->
-    <script src="/frontend/usuario/js/perfil.js"></script>
-
-    <script src="/frontend/usuario/js/perfil_ajax.js"></script>
+    <script type="module" src="frontend/usuario/js/ajax/perfil_ajax.js"></script>
 </body>
 </html>
