Correcciones en la autenticación e inicio del backend en la página de perfil

--- a/frontend/publico/autenticacion/login.html
+++ b/frontend/publico/autenticacion/login.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="frontend/publico/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="/frontend/publico/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Metropolitan
             </a>
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,10 +43,10 @@
                         <a class="nav-link" href="/">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../información_estatica.html">Conocenos</a>
+                        <a class="nav-link" href="/conocenos">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../usuario/inicio_editor.html">Escribe</a>
+                        <a class="nav-link" href="/redaccion">Escribe</a>
                     </li>
                     <li class="nav-item">
                         <a id="admin-nav-link" class="nav-link" href="/admin">Administrar</a>
@@ -99,6 +99,6 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Scripts JS -->
-    <script src="/frontend/publico/js//ajax/login_ajax.js"></script>
+    <script src="/frontend/publico/js/ajax/login_ajax.js"></script>
 </body>
 </html>
