--- a/frontend/publico/autenticacion/registro.html
+++ b/frontend/publico/autenticacion/registro.html
@@ -55,7 +55,7 @@
                 </ul>
             </div>
 
-            <!-- Redirección a registro -->
+            <!-- Redirección a inicio de sesión -->
             <div class="d-flex align-items-center user-info ms-auto">
                 <div class="text-end" id="nombre-rol">
                     <span class="username" id="navbar-info-usuario-nombre">
