--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="/conocenos">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/redaccion">Escribe</a>
+                        <a class="nav-link" href="/escritor">Escribe</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/admin">Administrar</a>
