--- a/frontend/usuario/articulos.html
+++ b/frontend/usuario/articulos.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="/conocenos">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/redaccion">Escribe</a>
+                        <a class="nav-link" href="/escritor">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/pagina-intermedia">Administrar</a>
+                        <a class="nav-link" href="/admin">Administrar</a>
                     </li>
                 </ul>
             </div>
