--- a/frontend/usuario/inicio_editor.html
+++ b/frontend/usuario/inicio_editor.html
@@ -19,15 +19,15 @@
     />
 
     <!-- Estilos de CSS -->
-    <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/inicio_editor.css">
+    <link rel="stylesheet" href="/frontend/usuario/css/navbar.css">
+    <link rel="stylesheet" href="/frontend/usuario/css/inicio_editor.css">
 </head>
 <body>
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="frontend/publico/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="/frontend/publico/img/logo.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                 Metropolitan
             </a>
             <button class="navbar-toggler me-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="/conocenos">Conocenos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/redaccion">Escribe</a>
+                        <a class="nav-link" href="/escritor">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/pagina-intermedia">Administrar</a>
+                        <a class="nav-link" href="/admin">Administrar</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +56,7 @@
                     <span class="role" id="navbar-info-usuario-rol">Rol</span>
                 </div>
                 <a href="/perfil">
-                    <img id="navbar-info-usuario-foto" src="frontend/publico/img/perfil_default.png" alt="Foto de perfil">
+                    <img id="navbar-info-usuario-foto" src="/frontend/img_biblioteca/perfiles/default.png" alt="Foto de perfil">
                 </a>
             </div>
         </div>
@@ -84,11 +84,11 @@
         <div class="row">
             <div class="col-6">
                 <h1>CREA</h1>
-                <a href="./redaccion_articulos.html"><button class="btn btn-success">Nuevo articulo</button></a>
+                <a href="/redaccion"><button class="btn btn-success">Nuevo articulo</button></a>
             </div>
             <div class="col-6">
                 <h1>DUDAS</h1>
-                <a href="../publico/información_estatica.html"><button class="btn btn-dark">Contactanos</button></a>
+                <a href="/conocenos"><button class="btn btn-dark">Contactanos</button></a>
             </div>
         </div>
 
